--- a/x360ce.Engine/JocysCom/Controls/Themes/Icons.xaml
+++ b/x360ce.Engine/JocysCom/Controls/Themes/Icons.xaml
@@ -1,5 +1,39 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+	<Viewbox x:Key="Icon_Delete" x:Shared="False" Stretch="Uniform">
+
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
+			<Canvas.RenderTransform>
+				<TranslateTransform X="0" Y="0" />
+			</Canvas.RenderTransform>
+			<Canvas.Resources>
+				<LinearGradientBrush xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Key="color-1" MappingMode="Absolute" StartPoint="30,30" EndPoint="447,417">
+					<LinearGradientBrush.GradientStops>
+						<GradientStopCollection>
+							<GradientStop Offset="0" Color="#EF5C51" />
+							<GradientStop Offset="1" Color="#C43126" />
+						</GradientStopCollection>
+					</LinearGradientBrush.GradientStops>
+				</LinearGradientBrush>
+			</Canvas.Resources>
+			<!--  Unknown tag: metadata  -->
+			<!--  Unknown tag: sodipodi:namedview  -->
+			<Canvas>
+				<Path
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					Name="curve0"
+					Data="M392 29.5l90.5 90.5l-136 136l136 136l-90.5 90.5l-136 -136l-136 136l-90.5 -90.5l136 -136l-136 -136l90.5 -90.5l136 136z"
+					Fill="{StaticResource color-1}"
+					StrokeDashArray=""
+					StrokeEndLineCap="Flat"
+					StrokeLineJoin="Miter"
+					StrokeMiterLimit="10"
+					StrokeStartLineCap="Flat"
+					StrokeThickness="1" />
+			</Canvas>
+		</Canvas>
+	</Viewbox>
+
 	<Viewbox x:Key="Icon_Add" x:Shared="False" Stretch="Uniform">
 		<Canvas
 			Canvas.Left="0"
