--- a/x360ce.App.Beta/Controls/PadTabPages/MacrosControl.xaml
+++ b/x360ce.App.Beta/Controls/PadTabPages/MacrosControl.xaml
@@ -8,7 +8,7 @@
 	d:DesignHeight="260"
 	d:DesignWidth="640"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
-	mc:Ignorable="d">
+	mc:Ignorable="d" Loaded="UserControl_Loaded">
 	<UserControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
