--- a/x360ce.App.Beta/Controls/PadTabPages/MacrosControl.xaml
+++ b/x360ce.App.Beta/Controls/PadTabPages/MacrosControl.xaml
@@ -2,6 +2,7 @@
 	x:Class="x360ce.App.Controls.UserMacrosControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:converters="clr-namespace:x360ce.App.Converters"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -45,7 +46,7 @@
 								</StackPanel>
 							</Button>
 
-							<Button Name="SaveButton" Style="{StaticResource ToolBarButton}">
+							<Button Name="SaveButton" Style="{StaticResource ToolBarButton}" Click="SaveButton_Click">
 								<StackPanel Style="{StaticResource ButtonStackPanel}">
 									<ContentControl Content="{StaticResource Icon_Save}" Style="{StaticResource ButtonContentControl}" />
 									<Label Content="Save" Style="{StaticResource ButtonLabel}" />
@@ -89,12 +90,19 @@
 						BorderThickness="1"
 						SnapsToDevicePixels="True" />
 					<DataGrid
+						xmlns:local="clr-namespace:x360ce.App.Converters"
 						x:Name="MainDataGrid"
 						Grid.Row="2"
 						Height="Auto"
 						HorizontalAlignment="Stretch"
 						AutoGenerateColumns="False"
+						IsReadOnly="True"
 						SelectionChanged="MainDataGrid_SelectionChanged">
+						<DataGrid.Resources>
+							<converters:MapTypeConverter x:Key="MapTypeConverter" />
+							<converters:MapEventTypeConverter x:Key="MapEventTypeConverter" />
+							<converters:MapRpmTypeConverter x:Key="MapRpmTypeConverter" />
+						</DataGrid.Resources>
 						<DataGrid.Columns>
 							<DataGridCheckBoxColumn
 								Binding="{Binding IsEnabled}"
@@ -108,7 +116,7 @@
 								Header="Name"
 								SortDirection="{x:Null}" />
 							<DataGridTextColumn
-								Binding="{Binding MapType}"
+								Binding="{Binding MapType, Converter={StaticResource MapTypeConverter}}"
 								EditingElementStyle="{StaticResource TextBoxCell}"
 								ElementStyle="{StaticResource TextBlockCell}"
 								Header="Type" />
@@ -129,7 +137,7 @@
 								Header="Range Max" />
 
 							<DataGridTextColumn
-								Binding="{Binding MapRpmType}"
+								Binding="{Binding MapRpmType, Converter={StaticResource MapRpmTypeConverter}}"
 								EditingElementStyle="{StaticResource TextBoxRightCell}"
 								ElementStyle="{StaticResource TextBlockRightCell}"
 								Header="RPM Type" />
@@ -145,7 +153,7 @@
 								ElementStyle="{StaticResource TextBlockRightCell}"
 								Header="RPM Max" />
 							<DataGridTextColumn
-								Binding="{Binding MapEventType}"
+								Binding="{Binding MapEventType, Converter={StaticResource MapEventTypeConverter}}"
 								EditingElementStyle="{StaticResource TextBoxRightCell}"
 								ElementStyle="{StaticResource TextBlockRightCell}"
 								Header="Event" />
