Fix some scaling errors. Fixed Visual Studio designer crashing when opening WPF controls inside WinForms.

--- a/x360ce.App.Beta/Controls/PadTabPages/MacrosControl.xaml
+++ b/x360ce.App.Beta/Controls/PadTabPages/MacrosControl.xaml
@@ -46,7 +46,7 @@
 								</StackPanel>
 							</Button>
 
-							<Button Name="SaveButton" Style="{StaticResource ToolBarButton}" Click="SaveButton_Click">
+							<Button Name="SaveButton" Click="SaveButton_Click" Style="{StaticResource ToolBarButton}">
 								<StackPanel Style="{StaticResource ButtonStackPanel}">
 									<ContentControl Content="{StaticResource Icon_Save}" Style="{StaticResource ButtonContentControl}" />
 									<Label Content="Save" Style="{StaticResource ButtonLabel}" />
