--- a/x360ce.App.Beta/Forms/BaseWithHeaderControl.xaml
+++ b/x360ce.App.Beta/Forms/BaseWithHeaderControl.xaml
@@ -1,13 +1,16 @@
-﻿<Window
-	x:Class="x360ce.App.Forms.BaseWithHeaderWindow"
+﻿<UserControl
+	x:Class="x360ce.App.Forms.BaseWithHeaderControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Width="540"
-	Height="300"
+	Width="auto"
+	Height="auto"
+	MinHeight="160"
+	HorizontalAlignment="Stretch"
+	VerticalAlignment="Stretch"
 	mc:Ignorable="d">
-	<Window.Resources>
+	<UserControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="/x360ce.Engine;component/JocysCom/Controls/Themes/Default.xaml" />
@@ -15,7 +18,7 @@
 				<ResourceDictionary Source="/x360ce;component/Resources/Icons/Icons_Default.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
-	</Window.Resources>
+	</UserControl.Resources>
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
@@ -77,7 +80,7 @@
 			Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
 			BorderBrush="{DynamicResource {x:Static SystemColors.ControlDarkDarkBrushKey}}"
 			BorderThickness="0">
-			<ContentPresenter Name="MainBody" x:FieldModifier="public" Content="{Binding AdditionalContent, ElementName=userControl}" />
+			<ContentPresenter Name="MainBody" x:FieldModifier="public" />
 		</Border>
 		<StackPanel
 			Grid.Row="2"
@@ -86,7 +89,7 @@
 			Orientation="Horizontal">
 			<Button
 				Name="Button1"
-				Margin="8,0,0,0"
+				Margin="0,0,0,0"
 				Click="Button1_Click"
 				Style="{StaticResource ToolBarButton}">
 				<StackPanel Style="{StaticResource ButtonStackPanel}">
@@ -116,4 +119,4 @@
 			</Button>
 		</StackPanel>
 	</Grid>
-</Window>
+</UserControl>
