--- a/x360ce.App.Beta/Forms/LoadPresetsWindow.xaml
+++ b/x360ce.App.Beta/Forms/LoadPresetsWindow.xaml
@@ -2,18 +2,17 @@
 	x:Class="x360ce.App.Forms.LoadPresetsWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Forms"
+	xmlns:forms="clr-namespace:x360ce.App.Forms"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	mc:Ignorable="d">
-	<local:BaseWithHeaderControl x:Name="WinControl">
-		<local:BaseWithHeaderControl.MainContent>
-			<Label HorizontalAlignment="Center" VerticalAlignment="Center" Background="Red">
-				test 4
-			</Label>
-		</local:BaseWithHeaderControl.MainContent>
-	</local:BaseWithHeaderControl>
+	<controls:BaseWithHeaderControl x:Name="WinControl">
+		<controls:BaseWithHeaderControl.MainContent>
+			<controls:PresetsControl />
+		</controls:BaseWithHeaderControl.MainContent>
+	</controls:BaseWithHeaderControl>
 </Window>
 
