--- a/x360ce.App.Beta/Forms/UserDevicesWindow.xaml
+++ b/x360ce.App.Beta/Forms/UserDevicesWindow.xaml
@@ -4,15 +4,15 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:controls="clr-namespace:x360ce.App.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Forms"
+	xmlns:forms="clr-namespace:x360ce.App.Forms"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="400"
 	d:DesignWidth="800"
 	mc:Ignorable="d">
-	<local:BaseWithHeaderControl x:Name="WinControl">
-		<local:BaseWithHeaderControl.MainContent>
+	<controls:BaseWithHeaderControl x:Name="WinControl">
+		<controls:BaseWithHeaderControl.MainContent>
 			<controls:UserDevicesControl />
-		</local:BaseWithHeaderControl.MainContent>
-	</local:BaseWithHeaderControl>
+		</controls:BaseWithHeaderControl.MainContent>
+	</controls:BaseWithHeaderControl>
 </Window>
 
