--- a/x360ce.App.Beta/Controls/SettingsListControl.xaml
+++ b/x360ce.App.Beta/Controls/SettingsListControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.PresetsListControl"
+	x:Class="x360ce.App.Controls.SettingsListControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:converters="clr-namespace:x360ce.App.Converters"
@@ -22,9 +22,34 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
+		<ToolBarPanel Grid.Row="0" HorizontalAlignment="Left" Style="{StaticResource MainToolBarPanel}">
+			<ToolBar Style="{StaticResource MainToolBar}">
+				<Button
+					Name="EditButton"
+					HorizontalAlignment="Right"
+					Click="SettingsEditNoteButton_Click"
+					Style="{StaticResource ToolBarButton}">
+					<StackPanel Style="{StaticResource ButtonStackPanel}">
+						<ContentControl Content="{StaticResource Icon_Edit}" Style="{StaticResource ButtonContentControl}" />
+						<Label Content="Edit Note" Style="{StaticResource ButtonLabel}" />
+					</StackPanel>
+				</Button>
+			</ToolBar>
+		</ToolBarPanel>
 		<ToolBarPanel Grid.Row="0" HorizontalAlignment="Right" Style="{StaticResource MainToolBarPanel}">
 			<ToolBar Style="{StaticResource MainToolBar}">
+				<Button
+					Name="DeleteButton"
+					HorizontalAlignment="Right"
+					Click="DeleteButton_Click"
+					Style="{StaticResource ToolBarButton}">
+					<StackPanel Style="{StaticResource ButtonStackPanel}">
+						<ContentControl Content="{StaticResource Icon_Delete}" Style="{StaticResource ButtonContentControl}" />
+						<Label Content="Delete" Style="{StaticResource ButtonLabel}" />
+					</StackPanel>
+				</Button>
 				<Button
 					Name="RefreshButton"
 					HorizontalAlignment="Right"
@@ -37,7 +62,6 @@
 				</Button>
 			</ToolBar>
 		</ToolBarPanel>
-
 		<Border
 			Grid.Row="1"
 			Height="1"
@@ -56,6 +80,8 @@
 			SelectionChanged="MainDataGrid_SelectionChanged">
 			<DataGrid.Resources>
 				<converters:ChecksumToIdConverter x:Key="_ChecksumToIdConverter" />
+				<converters:MapToIntToDescription x:Key="_MapToIntToDescription" />
+
 			</DataGrid.Resources>
 			<DataGrid.Columns>
 				<DataGridTextColumn
@@ -65,22 +91,26 @@
 					Header="SID"
 					SortDirection="{x:Null}" />
 				<DataGridTextColumn
-					Binding="{Binding Type}"
+					Binding="{Binding FileName}"
 					EditingElementStyle="{StaticResource TextBoxCell}"
 					ElementStyle="{StaticResource TextBlockCell}"
-					Header="Type"
-					Visibility="Hidden" />
-				<DataGridTextColumn
-					Binding="{Binding VendorName}"
-					EditingElementStyle="{StaticResource TextBoxCell}"
-					ElementStyle="{StaticResource TextBlockCell}"
-					Header="Device Vendor Name" />
+					Header="File Name" />
 				<DataGridTextColumn
 					Width="*"
+					Binding="{Binding FileProductName}"
+					EditingElementStyle="{StaticResource TextBoxCell}"
+					ElementStyle="{StaticResource TextBlockCell}"
+					Header="File Title" />
+				<DataGridTextColumn
 					Binding="{Binding ProductName}"
 					EditingElementStyle="{StaticResource TextBoxCell}"
 					ElementStyle="{StaticResource TextBlockCell}"
-					Header="DeviceName" />
+					Header="Device Name" />
+				<DataGridTextColumn
+					Binding="{Binding MapTo, Converter={StaticResource _MapToIntToDescription}}"
+					EditingElementStyle="{StaticResource TextBoxCell}"
+					ElementStyle="{StaticResource TextBlockCell}"
+					Header="Map To" />
 			</DataGrid.Columns>
 			<DataGrid.CellStyle>
 				<Style TargetType="DataGridCell">
@@ -88,6 +118,9 @@
 				</Style>
 			</DataGrid.CellStyle>
 		</DataGrid>
+		<StackPanel x:Name="CommentPanel" Grid.Row="2">
+			<TextBlock x:Name="CommentLabel" Text="Note:" />
+		</StackPanel>
 	</Grid>
 
 </UserControl>
