--- a/x360ce.Engine/JocysCom/Controls/Themes/Default.xaml
+++ b/x360ce.Engine/JocysCom/Controls/Themes/Default.xaml
@@ -198,6 +198,8 @@
 		<Setter Property="Margin" Value="0,0,0,0" />
 		<Setter Property="Padding" Value="4,2,4,2" />
 		<Setter Property="VerticalContentAlignment" Value="Center" />
+		<Setter Property="HorizontalContentAlignment" Value="Center" />
+		<!--<Setter Property="MinWidth" Value="48" />-->
 	</Style>
 
 	<Style x:Key="LabelGrid" TargetType="Label">
